# depict

./: Cargo.toml  build.cmd
depict/: Cargo.toml
depict/src/: console.rs  draw_loop.rs  lib.rs  request_frame.rs  setup.rs  time.rs  web.rs
depict/src/draw/: mod.rs
depict/src/draw/primitives/: image.rs  mod.rs  rect.rs
depict/src/time/: chrono.rs  mod.rs
examples/demo/: Cargo.toml  build.cmd  index.html
examples/demo/src/: lib.rs  shaders.rs
examples/instanced_pixels/: Cargo.toml  index.html
examples/instanced_pixels/src/: lib.rs
examples/webgl_demo/: Cargo.toml  index.html
examples/webgl_demo/src/: lib.rs  shaders.rs
examples/webgl_instanced_pixels/: Cargo.toml  index.html
examples/webgl_instanced_pixels/src/: draw_loop.rs  lib.rs  request_frame.rs  shaders.rs
examples/webgl_instanced_pixels/src/time/: chrono.rs  mod.rs
vec_n/: Cargo.toml
vec_n/src/: lib.rs  vec2.rs  vec3.rs
vecn/: Cargo.toml
vecn/src/: lib.rs  mat2.rs  mat3x2.rs  vec2.rs  vec3.rs
webgl/: Cargo.toml
webgl/src/: buffer.rs  lib.rs  shader.rs
webgl/src/buffer/: array_buffer.rs  element_buffer.rs  mod.rs
webgl/src/geometry/: instanced_verts.rs  instanced_verts_and_indices.rs  mod.rs  vao.rs  verts.rs  verts_and_indices.rs
webgl/src/mesh/: instanced_verts.rs  instanced_verts_and_indices.rs  mod.rs  vao.rs  verts.rs  verts_and_indices.rs
webgl/src/web/: canvas.rs  document.rs  mod.rs  webgl2.rs  window.rs
