[package]
name = "webgl"
version = "0.1.0"
edition = "2021"

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
version = "0.3.4"
features = [
	'Window',
	'Document',
	'HtmlCanvasElement',
	'WebGlBuffer',
	'WebGlVertexArrayObject',
	'WebGl2RenderingContext',
	'WebGlProgram',
	'WebGlShader',
	'WebGlUniformLocation',
]
